part1/ponger/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ponger-svc
spec:
  type: ClusterIP
  selector:
    app: ponger-app
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000
